# Procesador_MESI_Arqui_II

./: .gitignore  CMakeLists.txt  Makefile  README.md  pe0.pec  pe1.pec  pe2.pec  pe3.pec  proc_sim
src/: ProcessingElement.cpp  ProcessingElement.hpp  ProgramLoader.cpp  SharedMemory.hpp  main.cpp
src/PE/: Instruction.hpp  MemoryFacade.hpp  ProcessingElement.cpp  ProcessingElement.hpp  ProcessorSystem.cpp  ProcessorSystem.hpp  ProgramLoader.cpp  ProgramLoader.hpp  SharedMemory.hpp  SharedMemoryInstance.hpp
src/components/: CacheL1_test.h  Memory_test.h  cacheL1.cpp  cacheL1.h  cacheLine.h  memory.cpp  memory.h
src/interconnect/: BusEnums.h  BusEnunms.h  BusInterconnect.cpp  BusInterconnect.h  BusTransaction.h
src/utils/: ConcurrentQueue.h  metrics.h
